added surefire section to pom